<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spike Bot</string>

    <string name="welcome">Welcome.</string>
    <string name="automate">Automate everyting.</string>
    <string name="login">Login</string>
    <string name="signup">Sign-up</string>
    <string name="forgotpassword">Forgot your password? (Admin users only)</string>
    <string name="lbl_password">Forgot Password</string>

    <string name="connect_cloud">Connecting to cloud...</string>
    <string name="search_home_controller">Searching for home controller...</string>

    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>
    <string name="something_wrong1">Something went wrong. Please try again.</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="title_activity_room_edit">RoomEditActivity</string>
    <string name="title_activity_schedule">Schedule Details</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="crash_toast_text">Crash Report automatically sent to server, It will be resolved shortly.</string>
    <string name="default_notification_channel_id">Spike Bot</string>

    <string name="login_success">Login Successfully</string>
    <string name="enter_panel_name">Enter Panel Name</string>
    <string name="umnark_all">UnMark All</string>
    <string name="mark_all">Mark All</string>
    <string name="socket_disconnected">socket disconnected</string>
    <string name="confgi_1">Device need some time to respond,\nwait a moment after the action</string>
    <string name="config_2">Point the Remote at AC and press the\n button\n Release when AC responds</string>
    <string name="config_2_tvremote">Point the Remote at TV and press the\n button\n Release when TV responds</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_dashboard1">DASHBOARD</string>
    <string name="menu_home">Home</string>
    <string name="menu_mood">Mood</string>
    <string name="menu_mood1">MOOD</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_schedule1">SCHEDULE</string>

    <string name="Mood"> <u>Mood</u></string>
    <string name="fan_error">Currently physical Fan on</string>
    <string name="heavyload">heavyload</string>
    <string name="ir_error">did not respond</string>
    <string name="bulb_title">Install Your Smart Blub</string>
    <string name="bulb_info">First, make sure the power is off on the light your replacing. Swap the current blub with your Smart Blub.</string>
    <string name="bulb_title1">Power up your smart blub</string>
    <string name="bulb_info1">Power on thw light wait about five seconds untill the Smart blub blink three times.</string>

    <string name="words_wifi_name">WIFI name</string>
    <string name="words_wifi_password">WIFI password</string>
    <string name="words_account_password">Account password</string>
    <string name="words_enter_gateway_password">enter WIFI password</string>
    <string name="words_enter_account_password">enter account password</string>
    <string name="words_ok">OK</string>
    <string name="fan">fan</string>
    <string name="curtain">curtain</string>
    <string name="door_sensor">door_sensor</string>
    <string name="temp_sensor">temp_sensor</string>
<!--    <string name="add_jetson">Add Smart Camera</string>-->
    <string name="add_jetson">Add Jetson</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="save">SAVE</string>
    <string name="batter_level">Battery Level</string>
    <string name="add_device">ADD A DEVICE</string>
    <string name="add_mood">ADD A MOOD</string>
    <string name="add_schedule">ADD A SCHEDULE</string>
    <string name="add_smartremote">ADD A SMART REMOTE</string>
    <string name="connected">CONNECTED TO</string>
    <string name="maxvaluecondition">Max value should bigger than the Min value.</string>
    <string name="gridcolumnwidth">50</string>
    <string name="gridSensorcolumnwidth">125</string>
    <string name="label_tv_remote">Do you want to associate your DTH/Settop box?</string>
    <string name="label_dth_remote">Do you want to associate your TV with DTH box?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
