<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_app_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@mipmap/ic_launcher_round">

    </ImageView>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_app_icon"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:src="@drawable/ic_app_title" />

    <TextView
        android:id="@+id/txt_wlcm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:text="@string/welcome"
        android:textColor="@color/automation_black"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_wlcm"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/automate"
        android:textColor="@color/automation_black"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <Button
        android:id="@+id/btn_signup_splash"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_button_login"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/automation_white"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_login_splash"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/btn_signup_splash"
        android:layout_margin="20dp"
        android:background="@drawable/background_button_login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/automation_white"
        android:textSize="20sp" />

</RelativeLayout>
