<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Add Remote"
                android:textColor="@color/signupblack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="3dp"
                android:backgroundTint="@color/sensor_button"
                app:srcCompat="@drawable/cross" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/automation_dark" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_remote_name"
                android:hint="Remote Name"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:background="#20808080"
            android:padding="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_blastername"
                android:visibility="visible"
                android:layout_marginLeft="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:visibility="gone"
                android:id="@+id/remote_blaster_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <FrameLayout
            android:background="@drawable/view_border_bottom_spinner"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="#20808080"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="3dp"
                    android:id="@+id/remote_room_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:visibility="invisible"
                    android:src="@drawable/icn_arrow_down_spinner2"
                    android:layout_marginRight="8dp"
                    android:layout_width="18dp"
                    android:layout_height="18dp" />

            </LinearLayout>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/signupblack"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            tools:text="@string/label_tv_remote"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="22dp">

                <RelativeLayout
                    android:id="@+id/relative_yes"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/relative_plus"
                    android:background="@drawable/background_decrease_corner">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/automation_white"
                        android:text="@string/yes"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relative_no"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/background_button_login_gray">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/automation_white"
                        android:text="@string/no"></TextView>

                </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="center"
                android:visibility="gone"
                android:text="CANCEL" />


            <Button
                android:id="@+id/btn_save"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/save"
                android:textSize="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:textColor="@color/automation_white"
                android:background="@drawable/drawable_blue_schedule" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>